tests/errors/tc_stmt_return_void_val.lx
@module "main"

const foo -> fn () void {
    return 42;
}

pub const main -> fn () int {
    return 0;
}
